--- a/pom.xml
+++ b/pom.xml
@@ -1090,6 +1090,13 @@
                 <artifactId>titan-berkeleyje-jre6</artifactId>
                 <version>0.4.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.shell</groupId>
+                <artifactId>spring-shell</artifactId>
+                <version>1.1.0.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
