--- a/pom.xml
+++ b/pom.xml
@@ -1097,7 +1097,19 @@
                 <version>1.1.0.RELEASE</version>
             </dependency>
 
+            <dependency>
+                <groupId>jline</groupId>
+                <artifactId>jline</artifactId>
+                <version>2.12</version>
+            </dependency>
         </dependencies>
+
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
     </dependencyManagement>
 
     <build>
